// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <div>
    <div
      class="d-flex"
    >
      <div>
        <svg
          class="me-2 bi icon--xs"
        >
          <use
            xlink:href="#geo-alt-fill"
          />
        </svg>
      </div>
      <p
        class="fw-bold mb-0"
      >
        Exemple of very long label that can wrap on 2 lines
      </p>
    </div>
    <p>
      Description text goes here.
    </p>
  </div>
</jest>
`;

exports[`OE - Description List renders correctly 2`] = `
<jest>
  <div>
    <div
      class="row"
    >
      <div
        class="col-3"
      >
        <div
          class="d-flex"
        >
          <div>
            <svg
              class="me-2 bi icon--xs"
            >
              <use
                xlink:href="#geo-alt-fill"
              />
            </svg>
          </div>
          <p
            class="fw-bold mb-0"
          >
            Exemple of very long label that can wrap on 2 lines
          </p>
        </div>
      </div>
      <div
        class="col-9"
      >
        <p>
          Description text goes here.
        </p>
      </div>
    </div>
  </div>
</jest>
`;
